[package]
name = "ton"
version = "0.1.0"
edition = "2021"

[dependencies]
relayer-base = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
r2d2 = { workspace = true }
error-stack = { workspace = true }
redis = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

tonlib-core = "0.26.0"
nacl = "0.5.3"
num-bigint = "0.4.6"
async-trait = "0.1.88"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
reqwest = "0.12.20"
httpmock = "0.7.0"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}

[dev-dependencies]
relayer-base = { workspace = true, features = ["mocks"] }
mockall = { workspace = true }

[[bin]]
name = "ton_includer"
path = "src/bin/ton_includer.rs"

[[bin]]
name = "ton_distributor"
path = "src/bin/ton_distributor.rs"

[[bin]]
name = "ton_subscriber"
path = "src/bin/ton_subscriber.rs"

[[bin]]
name = "ton_ingestor"
path = "src/bin/ton_ingestor.rs"

